[package]
name = "linkerd2-request-instrument"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
tower = "0.1"
tracing = "0.1"
tracing-futures = "0.0.1-alpha.1"
