[package]
name = "linkerd2-router"
version = "0.1.0"
authors = [
    "Oliver Gould <ver@buoyant.io>",
    "Carl Lerche <me@carllerche.com>",
]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
indexmap = "1.0.0"
linkerd2-stack  = { path = "../linkerd2-stack" }
log = "0.4"
tower-load-shed = "0.1"
tokio = "0.1.20"
tokio-sync = "0.1.6"
tokio-timer = "0.2.4"
tower-service = "0.2"
tracing = "0.1.2"
