[package]
name = "linkerd2-router"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
indexmap = "1.0.0"
linkerd2-stack  = { path = "../linkerd2-stack" }
log = "0.4"
tower-load-shed = "0.1"
tokio = "0.1.20"
tokio-sync = "0.1.6"
tokio-timer = "0.2.4"
tower-service = "0.2"
tracing = "0.1.2"
tracing-futures    = "0.0.1-alpha.1"
