[package]
name = "linkerd2-stack"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
linkerd2-error = { path = "../linkerd2-error" }
tower-layer = "0.1"
tower-service = "0.2"

[dev-dependencies]
linkerd2-task = { path = "../linkerd2-task", features = ["test_util"] }
log = "0.4"
tokio = "0.1.7"
