[package]
name = "linkerd2-metrics"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[features]
default = []
test_util = []

[dependencies]
deflate = { version = "0.7.18", features = ["gzip"] }
futures = "0.1"
http = "0.1"
hyper = "0.12.3"
indexmap = "1.0"
log = "0.4"

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
